--- a/src/css/common.css
+++ b/src/css/common.css
@@ -83,7 +83,6 @@ input {
 
 body {
     min-width: 320px;
-    background: #f9f9f9;
     overflow-x: hidden;
     -webkit-text-size-adjust: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -93,6 +92,7 @@ body {
     -ms-user-select: none;
     user-select: none;
     color: #333;
+    background-color: #FFFFFF;
 }
 
 :focus {
